# Fala

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADAPTER_CONTRACTS.md  ARTIFACTS_AND_REFERENCES.md  CARRIER_RUNTIME.md  CONCEPTUAL_MODEL.md  DOCUMENT_DOMAIN_PACK.md  DOMAIN_PACKS.md  EVENTS_AND_REPLAY.md  FALA_2_0_PLAN.md  FALA_2_CARRIER_RUNTIME.md  FALA_ARCHITECTURE_STATUS.md  MIGRATIONS.md  MIGRATION_FROM_FALA_1.md  MULTI_FALA_COMPOSITION.md  PROCESS_RUNTIME.md  RUNTIME_SEMANTICS.md  SECURITY.md  SPLOT_DOMAIN_PACK.md  SQLITE_BACKEND.md
examples/carrier-runtime/: local_first.py
examples/domain-packs/documents/: document-carrier.example.json
examples/domain-packs/signals/: carrier-package.yaml
examples/domain-packs/splot/: carrier-package.yaml  local_arbitration.py
examples/multi-fala/basic/: local_bridge.py
examples/pipelines/basic/: Makefile  basic_enrichment.yaml  carrier-package.yaml  process-runtime-package.yaml  run-input.example.yaml  source-list.example.csv
src/fala/: __init__.py  adapters.py  artifacts.py  auth.py  blueprints.py  carrier_runtime.py  cli.py  client.py  contract_lint.py  deployment.py  driver.py  embedded.py  errors.py  evidence.py  flows.py  gates.py  intake.py  lineage.py  metrics.py  models.py  operations.py  package_registry.py  postgres_store.py  project.py  queue_bridge.py  registry.py  routes.py  runner.py  runtime_backend.py  scheduler.py  schema_migrations.py  schema_validation.py  service.py  sqlite_store.py  state.py  step_bundle.py  store.py  store_factory.py  supervisor.py  worker.py  (+2 more)
src/fala/domain_packs/: __init__.py  documents.py  signals.py  splot.py
src/fala/sdk/: __init__.py
src/fala/web/: __init__.py  (+3 more)
tests/: runtime_backend_conformance.py  test_carrier_package_schema.py  test_fala2_runtime_backend.py  test_fala_carriers.py  test_fala_driver.py  test_fala_errors.py  test_fala_flow_orchestration.py  test_fala_flows.py  test_fala_gates_evidence.py  test_fala_runtime.py  test_fala_runtime_backend.py  test_fala_sdk.py  test_fala_step_adapters.py  test_runtime_backend_conformance.py
(+37 files in other folders)
