[project]
name = "fala"
version = "0.1.0"
description = "SQLite-first runtime for observable information flows"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "jsonschema>=4.23.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
client = [
  "httpx>=0.27.0",
]
api = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
]
web = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]
s3 = [
  "boto3>=1.34.0",
]
redis = [
  "redis>=5.0.0",
]

[project.scripts]
fala = "fala.cli:main"
fala-worker = "fala.worker_cli:main"
process-runtime = "fala.cli:main"
process-runtime-worker = "fala.worker_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fala"]
