[project]
name = "fala"
version = "0.1.0"
description = "SQLite-first runtime for observable information flows"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "jsonschema>=4.23.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
fala = "fala.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fala"]
