[project]
name = "fala-runtime"
version = "0.1.0"
description = "SQLite-first runtime for observable information flows"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "jsonschema>=4.23.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
fala = "fala.cli:main"

[project.urls]
Homepage = "https://github.com/mikolaj92/Fala"
Repository = "https://github.com/mikolaj92/Fala"
Issues = "https://github.com/mikolaj92/Fala/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fala"]
